packages/style-stencila/src/atoms/editor.css
@import '../base.css';

:host,
stencila-editor {
  all: initial;

  @apply flex max-w-full;
  --border-width: 1px;
  --background-color: transparent;

  .editorContainer {
    @apply flex flex-col flex-grow max-w-full border rounded border-neutral-300;
    background-color: var(--background-color);
    border-width: var(--border-width);

    &:focus-within {
      box-shadow: inset 0px 0px 0px 2px var(--color-neutral-400);
    }
  }

  .editor {
    @apply flex-grow max-w-full overflow-auto font-mono cursor-text;
  }

  &::slotted(.editorContainer) {
    .codemirror-content *,
    .gutterElement * {
      @apply font-mono text-sm;
    }

    .codemirror-focused {
      @apply outline-none;
    }

    .codemirror-scroller {
      @apply overflow-auto;
    }
  }

  menu {
    @apply flex justify-end p-0 py-px m-0 border-t border-neutral-300;

    stencila-icon {
      @apply mr-1;
    }

    select {
      @apply mr-2 text-xs text-right bg-transparent border-none appearance-none text-neutral-700 font-body;

      option {
        @apply text-right font-body;
      }

      &:active,
      &:focus,
      &:hover {
        @apply text-neutral-900;
      }
    }
  }
}

